--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -1,2 +1,7 @@
 // Import page-specific CSS files here.
 @import "home";
+@import "../components/alert";
+@import "../components/button";
+@import "../components/general";
+@import "../components/card";
+@import "../components/banner";
