--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,10 +1,31 @@
-<h1>Welcome to app</h1>
-<h2>Lists </h2>
+<div class="container">
 
-<ol>
-  <% @lists.each do |list| %>
-    <li><%= link_to list.name, list %> | <%= link_to "Edit", edit_list_path(list) %> | <%= link_to "X", list, method: :delete, data: { confirm: 'Are you sure?' } %> </li>
-  <% end %>
-</ol>
+  <h1>Welcome to app</h1>
 
-<%= link_to "Add a list", new_list_path %>
+  <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://images.unsplash.com/photo-1535016120720-40c646be5580?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1050&q=80)">
+    <div class="container">
+      <h1>Movie Lists !</h1>
+      <%= link_to "Add a list", new_list_path, class: "btn btn-flat" %>
+    </div>
+  </div>
+  <br>
+  <br>
+
+  <div class="cards">
+    <% @lists.each do |list| %>
+
+      <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(
+        <% if list.photo.attached? %>
+          <%= cl_image_path list.photo.key %>
+        <% end %> )">
+        <%= link_to list.name, list %>
+        <br>
+        <%= link_to "Edit", edit_list_path(list), class: "btn btn-gradient" %><br>
+        <%= link_to "X", list, method: :delete, data: { confirm: 'Are you sure?' } %>
+      </div>
+    <% end %>
+  </div>
+
+
+  <br>
+</div>
