--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -1,12 +1,2 @@
 
-<%= simple_form_for(@list) do |f| %>
-
-  <div class="form-inputs">
-    <%= f.input :name %>
-
-  </div>
-
-  <div class="form-actions">
-    <%= f.button :submit %>
-  </div>
-<% end %>
+<%= render 'form', list: @list %>
